--- a/.github/workflows/publish-docker-image-pgadmin.yaml
+++ b/.github/workflows/publish-docker-image-pgadmin.yaml
@@ -1,4 +1,4 @@
-name: Publish Docker Image phpMyAdmin
+name: Publish Docker Image pgAdmin
 
 on:
   workflow_dispatch: { }
@@ -31,9 +31,9 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@48aba3b46d1b1fec4febb7c5d0c644b249a11355 # v6.10.0
         with:
-          context: base/phpmyadmin/4.8.1
-          file: base/phpmyadmin/4.8.1/Dockerfile
+          context: base/pgadmin/7.6
+          file: base/pgadmin/7.6/Dockerfile
           tags: |
-            danielpacak/vulhub-phpmyadmin:4.8.1
+            danielpacak/vulhub-pgadmin:7.6
           push: ${{ github.event_name != 'pull_request' }}
           platforms: ${{ env.PLATFORMS }}
