--- a/base/phpmyadmin/4.8.1/Dockerfile
+++ b/base/phpmyadmin/4.8.1/Dockerfile
@@ -1,10 +1,10 @@
-FROM php:7.2-apache
+FROM php:7.4-apache
 
 LABEL maintainer="phithon <root@leavesongs.com>"
 
 RUN set -ex \
     && apt-get update \
-    && apt-get install -y --no-install-recommends unzip \
+    && apt-get install -y --no-install-recommends unzip libonig-dev \
     && rm -r /var/lib/apt/lists/*
 
 ARG SOURCE_URL=https://files.phpmyadmin.net/phpMyAdmin/4.8.1/phpMyAdmin-4.8.1-all-languages.zip
