--- a/python/pgadmin/all.yaml
+++ b/python/pgadmin/all.yaml
@@ -49,13 +49,13 @@ spec:
               mountPath: /var/lib/pgadmin
             - name: logs
               mountPath: /var/log/pgadmin
-#          resources:
-#            requests:
-#              cpu: 0.2m
-#              memory: 256Mi
-#            limits:
-#              cpu: 0.5m
-#              memory: 512Mi
+          resources:
+            requests:
+              cpu: 250m
+              memory: 64Mi
+            limits:
+              cpu: 500m
+              memory: 256Mi
       volumes:
         - name: data
           emptyDir: {}
