--- a/python/python-hello-flask/pyproject.toml
+++ b/python/python-hello-flask/pyproject.toml
@@ -3,7 +3,7 @@ name = "python-hello-flask"
 version = "0.1.0"
 description = "Descriptions are for wimps"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "==3.9.23"
 dependencies = [
     "flask>=3.1.1",
     "requests>=2.32.4",
