--- a/examples/python/hello-fastapi-python3.13/pyproject.toml
+++ b/examples/python/hello-fastapi-python3.13/pyproject.toml
@@ -3,7 +3,7 @@ name = "python-hello-fastapi"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "~=3.13.0"
 dependencies = [
     "fastapi[standard]>=0.116.1",
 ]
