--- a/examples/python/hello-flask-python3.9/deploy/kubernetes/all.yaml
+++ b/examples/python/hello-flask-python3.9/deploy/kubernetes/all.yaml
@@ -2,19 +2,19 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: python-hello-flask
+  name: hello-flask-python-39
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: python-hello-flask
-  namespace: python-hello-flask
+  name: hello-flask
+  namespace: hello-flask-python-39
   labels:
-    app: python-hello-flask
+    app: hello-flask
 spec:
   type: ClusterIP
   selector:
-    app: python-hello-flask
+    app: hello-flask
   ports:
     - port: 5050
       protocol: TCP
@@ -23,23 +23,23 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: python-hello-flask
-  namespace: python-hello-flask
+  name: hello-flask
+  namespace: hello-flask-python-39
   labels:
-    app: python-hello-flask
+    app: hello-flask
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: python-hello-flask
+      app: hello-flask
   template:
     metadata:
       labels:
-        app: python-hello-flask
+        app: hello-flask
     spec:
       containers:
-        - name: python-hello-flask
-          image: docker.io/library/python-hello-flask:latest
+        - name: hello-flask
+          image: docker.io/danielpacak/python-hello-flask:python3.9-glibc
           imagePullPolicy: IfNotPresent
           env:
             - name: HELLO_FLASK_MEMORY_BYTES
