--- a/examples/python/hello-flask-python3.9/deploy/kubernetes/all.yaml
+++ b/examples/python/hello-flask-python3.9/deploy/kubernetes/all.yaml
@@ -10,6 +10,45 @@ metadata:
   name: hello-flask
   namespace: hello-flask-python-39
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: hello-flask-python-39
+rules:
+  - apiGroups:
+      - apps
+    resources:
+      - deployments
+      - statefulsets
+      - replicasets
+    verbs:
+      - create
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - create
+      - get
+      - list
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: hello-flask-python-39
+subjects:
+- kind: ServiceAccount
+  name: hello-flask
+  namespace: hello-flask-python-39
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: hello-flask-python-39
+---
 apiVersion: v1
 kind: Service
 metadata:
